GNOME Bugzilla – Bug 436589
xsltproc --maxdepth seg faults
Last modified: 2013-09-30 02:22:17 UTC
If I pass --maxdepth to xsltproc but omit the number argument, xsltproc seg faults. While this doesn't really matter, the command-line argument handling should be fixed. To reproduce: % xsltproc --maxdepth zsh: 22987 segmentation fault xsltproc --maxdepth Occurs on both Solaris and Linux.
¿What version?
It occurs with every different version I have around which is quite a few. At the time I raised the issue, I did check with what was the latest version at the time. If you really want a version number, my current system has: Using libxml 20630, libxslt 10122 and libexslt 813 xsltproc was compiled against libxml 20629, libxslt 10122 and libexslt 813 libxslt 10122 was compiled against libxml 20629 libexslt 813 was compiled against libxml 20629
Fixed now: https://git.gnome.org/browse/libxslt/commit/?id=02b30799fe2f8a572f6eefb27b2b9f1265fc0db7 thanks, Daniel