Fix for bug 436589

https://bugzilla.gnome.org/show_bug.cgi?id=436589

Need to check availablility of argument before scanning it